--- a/src/langgraphagenticai/ui/uiconfigfile.ini
+++ b/src/langgraphagenticai/ui/uiconfigfile.ini
@@ -2,5 +2,5 @@
 
 PAGE_TITLE = LangGraph: Build Stateful Agentic AI Graph
 LLM_OPTIONS = Groq
-USECASE_OPTIONS = Basic Chatbot, Chatbot with Web Search
+USECASE_OPTIONS = Basic Chatbot, Chatbot with Web Search, AI News
 GROQ_MODEL_OPTIONS =llama-3.1-8b-instant , llama-3.3-70b-versatile , qwen/qwen3-32b 
